# StArch

./: .gitmodules  CMakeLists.txt
cmake/: install.cmake  sdl.cmake  version.cmake
